--- a/templates/yandex/index.html
+++ b/templates/yandex/index.html
@@ -11,8 +11,9 @@
     <div class="row">
     <hr>
     <div class="btn-group" role="group">
-        <input type="button" class="btn btn-primary" value="Добавить почтовый ящик" data-toggle="modal" data-target="#add_email">
+        <input id="btn_addemail" type="button" class="btn btn-primary" value="Добавить почтовый ящик" data-toggle="modal" data-target="#add_email">
         <a href="{% url 'update_db' %}" class="btn btn-primary" >Обновить базу</a>
+        <a href="/admin/" class="btn btn-info" >Админпанель</a>
 {#        <input type="button" class="btn btn-primary" value="Добавить домен" data-toggle="modal" disabled data-target="#add_email">#}
     </div><hr>
 
@@ -24,19 +25,17 @@
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             <h4 class="modal-title" id="AddEmail">Новый почтовый ящик</h4>
           </div>
-            <form action="{% url 'reg_user_token' %}" method="post" id="start">
+            <form action="." method="post" id="start" id="form_addemail">
                 {% csrf_token %}
                 <div class="modal-body">
                   <table>
                       <tr>
                           <td class="add_email">
-                          <div class="input-group">
-                              {{ add_e_form.login }}
-                               <span class="input-group-addon" id="basic-addon2">{{ add_e_form.login.label }}</span>
-                          </div>
+                              <div class="input-group">
+                                  {{ add_e_form.login }}
+                                   <span class="input-group-addon" id="basic-addon2">{{ add_e_form.login.label }}</span>
+                              </div>
                               </td>
-{#                          <td class="add_email">{{ add_e_form.login }}</td>#}
-{#                          <td class="add_email">{{ add_e_form.login.label }}</td>#}
                           <td class="add_email"></td>
                           <td class="add_email">{{ add_e_form.is_forward }}{{ add_e_form.is_forward.label }}</td>
 
@@ -55,7 +54,7 @@
                 </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
-                <button type="submit" class="btn btn-primary" data-toggle="form" data-target="#start">Создать</button>
+                <button id="btn_create_email" type="button" class="btn btn-primary" data-toggle="form" data-target="#start">Создать</button>
               </div>
           </form>
         </div>
@@ -77,9 +76,13 @@
                 <div class="modal-body">
                         <p> Вы хотите удалить почтовый ящик?</p>
                         <p id="log"></p>
+                        <p id="uid" style="display: none"></p>
 
                 </div>
-                <div class="modal-footer" id = "modal-footer"></div>
+                <div class="modal-footer" id = "modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal" id="cancel_email_del">Закрыть</button>
+                    <button type="button" class="btn btn-primary" id="delete_email">Удалить</button>
+                </div>
         </div>
       </div>
     </div>
@@ -95,23 +98,49 @@
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             <h4 class="modal-title" id="SetForward">Добавлене переадресации</h4>
           </div>
-            <form action="" name="SetForw" method="POST" id="set_forward_form">
+            <form action="" name="SetForw" id="set_forward_form">
                 {% csrf_token %}
-                <div class="modal-body">
+                <div class="modal-body" id="set_forward">
                     <p>Вы добавляете переадресацию для</p>
                     <p id="login_forward"></p>
+                    <p id="uid_forward"></p>
                     {{ set_forward.login }}
                     {{ set_forward.email_forward }}
                     {{ set_forward.is_copy }}
                     {{ set_forward.is_copy.label }}
                 </div>
-                <div class="modal-footer" id = "modal-footer-forward"></div>
+                <div class="modal-footer" id = "modal-footer-forward">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
+                    <button id="btn_setforward" type="button" class="btn btn-primary" data-toggle="form" data-target="#set_forward_form">Создать</button>
+                </div>
             </form>
         </div>
       </div>
     </div>
 </div>
 {# End Set Forward Email #}
+{# Del Forward #}
+<div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" id="del_forward">
+      <div class="modal-dialog modal-sm" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="DelForward">Удаление переадресации</h4>
+          </div>
+            <form name="DeleteForward" method="POST" id="del_forward_form">
+                {% csrf_token %}
+                <div class="modal-body">
+                    <p>Вы хотите удалить переадресацию <span id="id_fw"></span> для <span id="login_forw"></span></p>
+                </div>
+                <div class="modal-footer" id = "modal-footer-delforward">
+                    <button type="button" class="btn btn-default" data-dismiss="modal" id="cancel_forward_del">Закрыть</button>
+                    <button type="button" class="btn btn-primary" id="delete_forward">Удалить</button>
+                </div>
+            </form>
+        </div>
+      </div>
+    </div>
+{# End Del Forward #}
 
 {# Edit user #}
     <div class="row">
@@ -122,7 +151,7 @@
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             <h4 class="modal-title" id="EditUser">Редактирование пользователя</h4>
           </div>
-            <form action="{% url 'edit_user' %}" name="EditUserForm" method="POST" id="edit_user_form">
+            <form action="" name="EditUserForm" method="POST" id="edit_user_form">
                 {% csrf_token %}
                 <div class="modal-body">
                     <div id="login" name="login"></div>
@@ -130,7 +159,7 @@
                 </div>
                 <div class="modal-footer" id = "modal-footer-forward">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
-                    <button type="submit"  onclick="" class="btn btn-primary" data-toggle="form" data-target="#edit_user_form">Сохранить</button>
+                    <button  id="btn_edit_email_seve" type="button"  onclick="" class="btn btn-primary" data-toggle="form" data-target="#edit_user_form">Сохранить</button>
                 </div>
             </form>
         </div>
@@ -140,6 +169,8 @@
 {# End Edit user #}
 
 <div class="row">
+
+{#<table id="example" class="table table-striped table-bordered display" width="100%"></table>#}
 <table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%">
   <thead>
     <tr>
@@ -148,6 +179,7 @@
         <th>Ативен</th>
         <th>Рассылка</th>
         <th>Переадресация</th>
+        <th>Активность переадресации</th>
         <th>ID переадресации</th>
         <th>Копия</th>
         <th>Переадресация на</th>
@@ -156,100 +188,128 @@
         <th></th>
     </tr>
   </thead>
-  <tbody>
+  <tbody id="tbody">
   {% for account in accounts %}
-     <tr>
-        <td>{{ account.uid }}</td>
-        <td>{{ account.logins }}</td>
-        <td>{{ account.enabled }}</td>
-        <td>
+     <tr id="{{ account.uid }}">
+        <td id="uid-{{ account.uid }}">
+            {{ account.uid }}
+        </td>
+        <td id="login-{{ account.uid }}">
+            {{ account.logins }}
+        </td>
+        <td id="enabled-{{ account.uid }}" style="text-align: center;">
+            {% if account.enabled == 'yes' %}
+                <span class="glyphicon glyphicon-ok-circle" style="color: #3fb919"></span>
+            {% elif account.enabled == 'no' %}
+                <span class="glyphicon glyphicon glyphicon-remove-circle" style="color: #ef0303"></span>
+            {% endif %}
+        </td>
+        <td id="maillist-{{ account.uid }}">
             {% for foo in account.maillist %}
-                {{ foo.name }}
+                {{ foo.name }}<br>
             {% endfor %}
         </td>
+
        {% if account.forward %}
-           <td>
-               {% for foo in account.forward %}
-                   {{ foo }}<br>
+           <td id="forward-{{ account.uid }}" style="text-align: center;">
+               {% for foo in account.id_email %}
+                   <div class="col-md-12 forward-{{ foo.id_fw }}">
+                   {% if foo.forwards == 'yes' %}
+                       <span class="glyphicon glyphicon-ok-circle" style="color: #3fb919"></span>
+                    {% else %}
+                        <span class="glyphicon glyphicon glyphicon-remove-circle" style="color: #ef0303"></span>
+                   {% endif %}
+
+{#                        {{ foo.forwards }}#}
+                   </div>
                {% endfor %}
            </td>
 
-           <td>
+           <td id="enabled-froward-{{ account.uid }}" style="text-align: center">
+           {% for foo in account.id_email %}
+                <div class="col-md-12 enabled-forward-{{ foo.id_fw }}">
+                {% if foo.enabled_forw == 'yes' %}
+                    <span class="glyphicon glyphicon-ok-circle" style="color: #3fb919"></span>
+                    {% else %}
+                    <span class="glyphicon glyphicon glyphicon-remove-circle" style="color: #ef0303"></span>
+                {% endif %}
+{#                        {{ foo.enabled_forw }}#}
+                   </div>
+           {% endfor %}
+           </td>
 
-               {% for foo in account.id_fw %}
-                     {{ foo }}
-                   <a href="{% url 'del_forward' account.logins foo %}"> Удалить</a><br>
+           <td id="id_fw-{{ account.uid }}">
+               {% for foo in account.id_email %}
+                   <div class="col-md-6 id_fw-{{ foo.id_fw }}" style="padding-right: 0; padding-left: 0;">
+                        {{ foo.id_fw }}
+                   </div>
+                   <div class="col-md-6 btn-{{ foo.id_fw }}" style="padding-right: 0; padding-left: 0; text-align: center">
+                       <a href="#" id='delete_f'
+                          onclick="DelForwardModal('{{ account.logins }}','{{ foo.id_fw }}','{{ account.uid }}')" data-toggle="modal" data-target="#del_forward">
+                       <span class="glyphicon glyphicon-trash" data-toggle="tooltip" title="Удалить переадресацию"></span></a></div>
                {% endfor %}
-            </td>
-            <td>
-            {% for foo in account.copy %}
-                    {{ foo}}<br>
-            {% endfor %}
-            </td>
-            <td>
-            {% for foo in account.filter_param %}
-                {{ foo}}<br>
-            {% endfor %}
-            </td>
+           </td>
+           <td>
+               {% for foo in account.id_email %}
+                   <div class="col-md-12 copy-{{ foo.id_fw }}" style="text-align: center">
+                   {% if foo.copies == 'yes' %}
+                        <span class="glyphicon glyphicon-ok-circle" style="color: #3fb919"></span>
+                    {% else %}
+                        <span class="glyphicon glyphicon glyphicon-remove-circle" style="color: #ef0303"></span>
+                   {% endif %}
+{#                        {{ foo.copies }}#}
+                   </div>
+               {% endfor %}
+           </td>
+           <td>
+               {% for foo in account.id_email %}
+                   <div class="col-md-12 filter_param-{{ foo.id_fw }}">
+                        {{ foo.filter_param }}
+                   </div>
+               {% endfor %}
+           </td>
+
+{#           <td id="forward-{{ account.uid }}">#}
+{#               {% for foo in account.forward %}#}
+{#                        <div class="col-md-12 forward {{ account.uid }} {{ foo }} " style="padding-right: 0;padding-left: 0;">{{ foo }}</div>#}
+{#               {% endfor %}#}
+{#           </td>#}
+{##}
+{#           <td id="id_fw-{{ account.uid }}">#}
+{#               {% for foo in account.id_fw %}#}
+{#                   <div class="col-md-12 id_fw {{ account.uid }} {{ foo }} " style="padding-right: 0;padding-left: 0;">#}
+{#                       {{ foo }}#}
+{#                       <a href="#" id='delete_f' onclick="DelForwardModal('{{ account.logins }}','{{ foo }}','{{ account.uid }}')" data-toggle="modal" data-target="#del_forward"> Удалить</a>#}
+{#                   </div>#}
+{#               {% endfor %}#}
+{#            </td>#}
+{#            <td id="copy-{{ account.uid }}">#}
+{#            {% for foo in account.copy %}#}
+{#                <div class="col-md-12 copy {{ account.uid }} {{ foo }} " style="padding-right: 0;padding-left: 0;">{{ foo }}</div>#}
+{#            {% endfor %}#}
+{#            </td>#}
+{#            <td id="filter_param-{{ account.uid }}">#}
+{#            {% for foo in account.filter_param %}#}
+{#                <div class="col-md-12 filter_param {{ account.uid }} {{ foo }} " style="padding-right: 0;padding-left: 0;">{{ foo }}</div>#}
+{#            {% endfor %}#}
+{#            </td>#}
        {% else %}
            <td></td>
            <td></td>
            <td></td>
            <td></td>
+           <td></td>
+
        {% endif %}
-       <td><a href="#" onclick="EditUser(this)" data-toggle="modal" data-target="#edit_user" rel="{{ account.uid }}">Редактировать</a></td>
-       <td><a href="#" onclick="Delete_email(this)" data-toggle="modal" data-target="#is_delete" rel="{{ account.logins }}">Удалить ящик</a></td>
-       <td><a href="#" onclick="SetForward(this)" data-toggle="modal" data-target="#set_forward" rel="{{ account.logins }}">Добавить переадресацию</a></td>
+
+
+       <td style="text-align: center"><a href="#" onclick="EditUser(this)" data-toggle="modal" data-target="#edit_user" rel="{{ account.uid }}"><span class="glyphicon glyphicon-th-list" data-toggle="tooltip" title="Редактировать данные"></span></a></td>
+       <td style="text-align: center"><a href="#" onclick="Delete_email('{{ account.logins }}', '{{ account.uid }}')" data-toggle="modal" data-target="#is_delete"><span class="glyphicon glyphicon-trash" data-toggle="tooltip" title="Удалить email"></span></a></td>
+       <td style="text-align: center"><a href="#" onclick="SetForward('{{ account.logins }}', '{{ account.uid }}')" data-toggle="modal" data-target="#set_forward" rel=""><span class="glyphicon glyphicon-plus" data-toggle="tooltip" title="Добавить переадресацию"></span></a></td>
     </tr>
    {% endfor %}
   </tbody>
 </table>
-<table>
-    <thead>
-        <tr></tr>
-        <tr></tr>
-        <tr></tr>
-        <tr></tr>
-        <tr></tr>
-    </thead>
-    <tbody>
-    {% for em in accounts.infoeamil %}
-        <tr>
-        <td>{{ em.uid }}</td>
-        <td>{{ em.login }}</td>
-        <td>{{ em.enabled }}</td>
-        {% for foo in accounts.alliases %}
-            <td>{{ foo.name }}</td>
-        {% endfor %}
-        {% for foo in accounts.maillist %}
-            <td>{{ foo.name }}</td>
-          {% endfor %}
-
-        {% for foo in accounts.forward %}
-            <td>{{ foo.id_fw }}</td>
-            <td>{{ foo.forward }}</td>
-            <td>{{ foo.copy }}</td>
-            <td>{{ foo.filter_param }}</td>
-          {% endfor %}
-        </tr>
-
-  {% endfor %}
-  {% for foo in accounts.alliases %}
-      <tr>
-      <td>{{ foo }}</td>
-      </tr>
-
-  {% endfor %}
-  {% for foo in accounts.maillist %}
-    <td>{{ foo }}</td>
-  {% endfor %}
-  {% for foo in accounts.forward %}
-    <td>{{ foo }}</td>
-  {% endfor %}
-
-    </tbody>
-</table>
-
 </div>
 {% endblock %}
 
